[gd_scene load_steps=5 format=3 uid="uid://0bvu3kq7qnal"]

[ext_resource type="Script" path="res://scenes/Hall.gd" id="1_eu127"]
[ext_resource type="PackedScene" uid="uid://bijq5fqp57yd4" path="res://scenes/LoaderTrigger.tscn" id="2_fcpmw"]
[ext_resource type="PackedScene" uid="uid://cy7vwbnkk3yj1" path="res://scenes/HallDoor.tscn" id="3_1akbl"]
[ext_resource type="PackedScene" uid="uid://df28hj6wi4fdx" path="res://scenes/HallDirectionDetector.tscn" id="4_m3iyb"]

[node name="Hall" type="Node3D" groups=["ExhibitItem", "Hall"]]
script = ExtResource("1_eu127")

[node name="LoaderTrigger" parent="." instance=ExtResource("2_fcpmw")]
monitoring = false

[node name="EntryDoor" parent="." instance=ExtResource("3_1akbl")]

[node name="ExitDoor" parent="." instance=ExtResource("3_1akbl")]

[node name="HallDirectionDetector" parent="." instance=ExtResource("4_m3iyb")]
